pycsdr (0.18.30) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Improved Power and Squelch modules.
  * Now supporting non-complex Squelch input.
  * Now supporting float Exec input.

 -- Marat Fayzullin <luarvique@gmail.com>  Tue, 6 May 2025 16:12:00 +0000

pycsdr (0.18.29) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Added end-of-page marke to fax pages.

 -- Marat Fayzullin <luarvique@gmail.com>  Tue, 8 Apr 2025 16:12:00 +0000

pycsdr (0.18.28) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Added configurable fax page limit.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 14 Mar 2025 16:12:00 +0000

pycsdr (0.18.27) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Refactored SSTV decoder code.
  * Eliminated FFTW3 race condition in SSTV decoder.
  * Disabled AVT-90 SSTV mode due to quality concerns.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 20 Jan 2025 16:12:00 +0000

pycsdr (0.18.26) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Fixed pixel window in PD120 and other modes.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 14 Oct 2024 16:12:00 +0000

pycsdr (0.18.25) bullseye jammy; urgency=low

  * Syncing versions with the latest CSDR.
  * Now marking SSTV BMPs with 0x73 at offset 7.
  * Added PD50, PD90, PD120, PD160, PD180, PD240, PD290 SSTV modes.
  * Added Wraase SC2-30, SC2-60, SC2-120 SSTV modes.
  * Added Scottie 3 and Scottie 4 SSTV modes (please test).
  * Added Martin 3 and Martin 4 SSTV modes (please test).
  * Added Robot 12 and Robot 24 SSTV modes (please test).
  * Added AVT-90 SSTV mode.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 14 Oct 2024 16:12:00 +0000

pycsdr (0.18.24) bullseye jammy; urgency=low

  * [jketterl] Added Throttle module.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 15 Jul 2024 16:12:00 +0000

pycsdr (0.18.23) bullseye jammy; urgency=low
