@@ -19,16 +19,14 @@ static void reportPower(Squelch* self, float level) {
 }
 
 static int Squelch_init(Squelch* self, PyObject* args, PyObject* kwds) {
-    static char* kwlist[] = {(char*) "format", (char*)"length", (char*) "decimation", (char*)"flushLength", (char*) "reportInterval", NULL};
-
-    // default reporting interval
-    self->reportInterval = 1;
+    static char* kwlist[] = {(char*) "format", (char*)"length", (char*) "decimation", (char*)"hangLength", (char*)"flushLength", (char*) "reportInterval", NULL};
 
     PyObject *format = nullptr;
     unsigned int length = 1024;
     unsigned int decimation = 1;
+    unsigned int hangLength = 0;
     unsigned int flushLength = 1024 * 5;
-    if (!PyArg_ParseTupleAndKeywords(args, kwds, "O!IIII", kwlist, FORMAT_TYPE, &format, &length, &decimation, &flushLength, &self->reportInterval)) {
+    if (!PyArg_ParseTupleAndKeywords(args, kwds, "O!IIIII", kwlist, FORMAT_TYPE, &format, &length, &decimation, &hangLength, &flushLength, &self->reportInterval)) {
         return -1;
     }
 
@@ -38,12 +36,12 @@ static int Squelch_init(Squelch* self, PyObject* args, PyObject* kwds) {
 
     if (format == FORMAT_COMPLEX_FLOAT) {
         self->setModule(new Csdr::Squelch<Csdr::complex<float>>(
-            length, decimation, flushLength,
+            length, decimation, hangLength, flushLength,
             [self] (float level) { reportPower(self, level); }
         ));
     } else if (format == FORMAT_FLOAT) {
         self->setModule(new Csdr::Squelch<float>(
-            length, decimation, flushLength,
+            length, decimation, hangLength, flushLength,
             [self] (float level) { reportPower(self, level); }
         ));
     } else {
