@@ -2,6 +2,8 @@ pycsdr (0.18.30) bullseye jammy; urgency=low
 
   * Syncing versions with the latest CSDR.
   * Improved Power and Squelch modules.
+  * Added configurable processed chunk length.
+  * Added configurable hang and flush lengths.
   * Now supporting non-complex Squelch input.
   * Now supporting float Exec input.
 
